# RustInMemoryFileSystem

./: Makefile  README.md  package.json
assembly/: index.ts  tsconfig.json
rust/: Cargo.toml  Makefile  Readme.md  in_memory_wasm_filesystem.wasm
rust/src/: filesystem.rs  lib.rs  marshall.rs  v9p.rs  wasi.rs  wasiinterface.rs
