[package]
name = "example-tokio-wasm"
version = "0.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.6.0"
byteorder = "1.5.0"

[build]
rustflags = ["-C", "target-feature=-crt-static"]

[toolchain]
channel = "nightly"
targets = ["wasm32-wasip1"]
