[package]
name = "wasm_filesystem"
version = "1.0.0"
authors = ["Phylliida"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.6.0"
byteorder = "1.5.0"

[build]
rustflags = ["-C", "target-feature=-crt-static"]

[toolchain]
channel = "nightly"
targets = ["wasm32-wasip1"]
